# cosmic-python-book

./: .gitignore  Makefile  docker-compose.yml  flask_app.py  orm.py  pyproject.toml
src/allocation/adapters/: orm.py
src/allocation/entrypoints/: redis_eventconsumer.py
tests/: conftest.py
tests/e2e/: api_client.py  test_external_events.py
tests/integration/: test_uow.py
